# SearchAlgorithms---Milestone-2

./: AStar.h  AStarStateCompare.h  BFS.h  BestFS.h  Boot.h  CFCashManager.h  CMakeLists.txt  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFS.h  FileCacheManager.h  Matrix.h  MyClientHandler.cpp  MyPriorityQueue.cpp  MyPriorityQueue.h  MyQueue.h  MyTestClientHandler.cpp  ObjectAdapter.cpp  ObjectAdapter.h  ParallelServer.c++  ParallelServer.h  README.md  Searchable.h  Searcher.h  SerialServer.cpp  SerialServer.h  Server.h  Solver.h  State.h  StatePtrCompare.h  log.txt  main.cpp
